css/main.css
@font-face {
	font-family: Gafata, sans-serif;
	font-family: Sanchez, serif;
	src: url (http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400)
}

#wrapper {
	background: #E0F6FC;
}

body {
	width: 800px;
	margin: 0 auto;
	font-family: Gafata, sans-serif;
	padding: 0;
  /*------text-shadow: 4px 4px 4px #aaa;------*/
}

h1 {
	font-family: Sanchez, Arial, serif;
	font-weight: 400;
	color: #282626
	font-size: 36px
	clear: both;
}

h2, h3 {
	font-family: Sanchez, Arial, serif;
	font-weight: 400;
	color: #282626
	font-size: 30px
}

p {
	font-family: Gafata, sans-serif;
	color: #4F4C4C;
	font-size: 16px;
}

#logo {
	float: right;
}

#main_nav {
	font-family: Gafata, sans-serif;
	color: #4F4C4C;
	font-size: 14px;
	width: 600px;
	background: #DBCBCB;
	padding: 0;
}

#main_nav li {
	width: 200px;
	background: #870404;
	list-style-type: none;
	color: #FFF;
	float: left;
}

#tagline h1 {
	clear: both;
}

aside {
	background: #e3e3e3
}

